[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nereid/nereid"]

[project]
name = "nereid-engine"
description = "Water quality engine for computing graph-based land surface load aggregation and BMP effectiveness."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
url = "https://github.com/Geosyntec/nereid"
authors = [{ name = "Austin Orr", email = "aorr@geosyntec.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Celery",
    "Framework :: Pydantic",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "networkx",
    "orjson",
    "pandas",
    "Pint",
    "pydantic>=1.10.0",
    "python-dotenv",
    "pytz",
    "PyYAML",
    "scipy",
]
dynamic = ["version"]

[project.optional-dependencies]
extras = ["graphviz", "matplotlib", "pydot"]
base-async-worker = ["celery[redis]"]
async-worker = ["nereid-engine[base-async-worker]", "nereid-engine[extras]"]
base-app = ["fastapi", "jinja2", "uvicorn", "uvloop", "websockets"]
app = [
    "nereid-engine[async-worker]",
    "nereid-engine[base-app]",
    "nereid-engine[extras]",
]
base-dev = ["coverage", "pytest", "pytest-cov", "pytest-xdist"]
dev = [
    "nereid-engine[app]",
    "nereid-engine[base-dev]",
    "httpx",
    "mypy",
    "pre-commit>=3.3.3,<4.0.0",
    "ruff==0.0.275",
    "watchfiles",
]

[tool.hatch.version]
path = "nereid/nereid/__init__.py"

[tool.pytest.ini_options]
filterwarnings = [
    # todo: remove after networkx.drawing.nx_pylab is updated for numpy>=2.0.0
    "ignore:`alltrue` is deprecated.:DeprecationWarning",
]

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[[tool.mypy.overrides]]
module = "nereid.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "brotli_asgi",
    "celery",
    "matplotlib",
    "networkx",
    "pandas",
    "scipy.interpolate",
]
ignore_missing_imports = true
