[metadata]
name = nereid
# version = Version needs regex in setup.py.
url = https://github.com/Geosyntec/nereid
license = BSD 3-Clause License
license-file = LICENSE
# description = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 
    Environment :: 
    Framework :: 
    License :: OSI Approved :: License
    Operating System :: OS Independent
    Programming Language :: Python


[options]
packages = find:
package_dir =
    = nereid
# include_package_data = true
# package_data={'': ['data/*.csv']},
python_requires = >= 3.6
[options.packages.find]
where = nereid

[isort]
profile = black
skip_gitignore = True


[tool:pytest]
testpaths = nereid/nereid/tests


[mypy]
plugins = pydantic.mypy
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True

[mypy-nereid.tests.*]
ignore_errors = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-celery.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pint.*]
ignore_missing_imports = True


[pydantic-mypy]
init_typed = True
warn_untyped_fields = True