[metadata]
name = nereid
# version = Version needs regex in setup.py.
url = https://github.com/Geosyntec/nereid
license = BSD 3-Clause License
license-file = LICENSE
# description = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 
    Environment :: 
    Framework :: 
    License :: OSI Approved :: License
    Operating System :: OS Independent
    Programming Language :: Python


[options]
packages = find:
package_dir =
    = nereid
include_package_data = true
python_requires = >= 3.6
install_requires =
    python-dotenv>=0.14,<0.19
    scipy>=1.5,<1.8
    pandas>=1.1,<1.4
    networkx>=2.5,<2.6
    pydot>=1.4,<1.5
    graphviz
    matplotlib>=3.3,<3.5
    fastapi>=0.65.3,<0.66
    aiofiles>=0.6,<0.8
    celery>=5.0,<5.2
    jinja2>=2.11,<3.1
    redis>=3.5,<3.6
    orjson>=3.4,<3.6
    pyyaml>=5.4.1,<5.5
    pint>=0.16,<0.18

[options.packages.find]
where = nereid

[options.package_data]
nereid = 
    core/*
    data/*
    data/default_data/*
    data/default_data/state/region/*
    data/default_data/state/region/nomographs/*
    static/*
    static/logo/*
    tests/test_data/*


[isort]
profile = black
skip_gitignore = True


[tool:pytest]
testpaths = nereid/nereid/tests


[mypy]
plugins = pydantic.mypy
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True

[mypy-nereid.tests.*]
ignore_errors = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-celery.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pint.*]
ignore_missing_imports = True


[pydantic-mypy]
init_typed = True
warn_untyped_fields = True