[metadata]
name = nereid
# version = Version needs regex in setup.py.
url = https://github.com/Geosyntec/nereid
license = BSD 3-Clause License
license-file = LICENSE
# description = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 
    Environment :: 
    Framework :: 
    License :: OSI Approved :: License
    Operating System :: OS Independent
    Programming Language :: Python


[options]
packages = find:
package_dir =
    = nereid
include_package_data = true
python_requires = >= 3.6
install_requires =
    python-dotenv>=0.14
    scipy>=1.5
    pandas>=1.1
    networkx>=2.5
    pyyaml>=5.4.1
    pint>=0.17
    matplotlib>=3.2.0
    graphviz
    pydot
    pydantic>=1.8.0

[options.extras_require]
app = 
    fastapi[all]>=0.70.0

async-app = 
    nereid[app]
    celery>=5.0
    redis>=4.0.0

dev = 
    nereid[async-app]
    black==22.1.0
    codecov
    coverage>=6.0.0
    isort>=5.0.0
    mypy>=0.910
    pytest
    requests

[options.packages.find]
where = nereid

[options.package_data]
nereid = 
    core/*
    data/*
    data/default_data/*
    data/default_data/state/region/*
    data/default_data/state/region/nomographs/*
    static/*
    static/logo/*
    tests/test_data/*


[isort]
profile = black
skip_gitignore = True


[tool:pytest]
testpaths = nereid/nereid/tests


[mypy]
plugins = pydantic.mypy, numpy.typing.mypy_plugin
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True

[mypy-nereid.tests.*]
ignore_errors = True



[mypy-scipy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-celery.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pint.*]
ignore_missing_imports = True


[pydantic-mypy]
init_typed = True
warn_untyped_fields = True